<resources>
    <string name="app_name">Play Your Way!</string>
    <string name="Mobile">Mobile Number</string>
    <string name="email">Email Address</string>
    <string name="OR">OR</string>*
    <string name="SignUp">Sign Up</string>
    <string name="otp_title">Enter Verification Code</string>
    <string name="otp_desc">Enter the 6-digit verification code sent to registered mobile number.</string>
    <string name="enter">Enter</string>
    <string name="resend">Resend</string>
    <string name="details">Sign Up to get started</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="age">Age</string>
    <string name="enterpassword">Enter Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="register">Register</string>
    <string name="username">User Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="district">District</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="join">JOIN</string>
    <string name="host">HOST</string>
    <string name="title_activity_join">Join</string>
    <string name="cricket">Cricket</string>
    <string name="football">Football</string>
    <string name="volleyball">Volleyball</string>
    <string name="tennis">Tennis</string>
    <string name="basketball">Basketball</string>
    <string name="badminton">Badminton</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_host">Host</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="teamname">Enter Your Team Name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="place">Place</string>
    <string name="title_activity_play_host">PlayHost</string>

    <string-array name="Games">
        <item>Cricket</item>
        <item>Football</item>
        <item>Volleyball</item>
        <item>Basketball</item>
        <item>Tennis</item>
        <item>Badminton</item>
    </string-array>
    <string name="title_activity_add_friends_request">AddFriendsRequest</string>
    <string name="title_activity_my_games">MyGames</string>
    <string name="title_activity_click_host_game">ClickHostGame</string>
    <string name="title_activity_click__joined_game_tile">Click_JoinedGameTile</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_game_location">Map</string>
    <string name="title_activity_directions">Map</string>
</resources>
