<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorProfile"
    tools:context=".Signup">
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/profile1"
        android:id="@+id/profileimage"/>


<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:id="@+id/fullname"
    android:layout_marginTop="20dp"
    android:layout_below="@+id/profileimage">
    <EditText
        android:id="@+id/firstname"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:background="@drawable/inputtext"
        android:ems="10"
        android:paddingLeft="10dp"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        />
    <EditText
        android:id="@+id/lastname"
        android:layout_width="115dp"
        android:layout_height="35dp"
        android:ems="10"
        android:hint="@string/lastname"
        android:paddingLeft="10dp"
        android:background="@drawable/inputtext"
        android:layout_toRightOf="@+id/firstname"
        android:layout_marginLeft="15dp"
        android:inputType="textPersonName"
        />
</RelativeLayout>

    <EditText
        android:id="@+id/username"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:background="@drawable/inputtext"
        android:layout_below="@+id/fullname"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:layout_centerHorizontal="true"
        android:paddingLeft="10dp"/>

    <EditText
        android:id="@+id/age"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:paddingLeft="10dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        android:layout_below="@+id/username"
        android:background="@drawable/inputtext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
         />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_below="@+id/age"
       >

        <RadioButton
            android:id="@+id/male"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_marginLeft="20dp"
            android:onClick="onRadioclicked"
            android:text="@string/male"
            android:textSize="17sp"
            android:textColor="#ffffff"
            tools:text="@string/male" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:layout_marginRight="8dp"
            android:onClick="onRadioclicked"
            android:text="@string/female"
            android:textSize="17sp"
            tools:text="@string/female" />
    </RadioGroup>

    <Button
        android:id="@+id/register"
        android:layout_width="250dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:onClick="PlayHost"
        android:text="@string/register"
        android:textColor="@color/buttontext"
        />


</RelativeLayout>