<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <VideoView
         android:id="@+id/bgVideoView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
    </android.support.constraint.ConstraintLayout>
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/aldrich"
        android:text="@string/app_name"
        android:textColor="@android:color/background_light"
        android:textSize="40sp"
        android:textStyle="bold"
       />
   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@+id/Login"
       android:layout_centerHorizontal="true"
       android:layout_marginBottom="30dp">

        <Spinner
            android:id="@+id/spinnerCountries"
            android:layout_width="112dp"

            android:layout_height="46dp"
            android:popupBackground="@color/common_google_signin_btn_text_dark_focused"
            android:textColor="#ffffff"
            android:theme="@style/AlertDialog.AppCompat.Light" />

        <EditText
            android:id="@+id/mobile"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Mobile"
            android:inputType="phone"
            android:layout_toRightOf="@+id/spinnerCountries"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
             />
   </LinearLayout>

    <Button
        android:id="@+id/Login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:padding="10dp"
        android:text="@string/SignUp"
        android:textColor="@color/buttontext"
         />



</RelativeLayout>